[gd_scene load_steps=11 format=2]

[ext_resource path="res://images/actors.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlayerBody.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.33636, 7.03665 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "air",
"speed": 5.0
} ]

[node name="Player" type="Node2D"]
__meta__ = {
"_edit_group_": true
}

[node name="PlayerBody" type="KinematicBody2D" parent="."]
collision_layer = 3
script = ExtResource( 2 )

[node name="PlayerHitBox" type="CollisionShape2D" parent="PlayerBody" groups=[
"player",
]]
position = Vector2( 0, 9 )
shape = SubResource( 1 )

[node name="PlayerSprite" type="AnimatedSprite" parent="PlayerBody"]
position = Vector2( 0, 8 )
frames = SubResource( 8 )
animation = "idle"
frame = 1
playing = true

[node name="PlayerFloorDetector" type="RayCast2D" parent="PlayerBody" groups=[
"player",
]]
position = Vector2( 0.0060215, 14.7687 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="Camera2D" type="Camera2D" parent="PlayerBody"]
position = Vector2( 0, -40 )
current = true
drag_margin_h_enabled = true

[node name="RightHurtPoint" type="Position2D" parent="PlayerBody"]
position = Vector2( 10, 12 )

[node name="LeftHurtPoint" type="Position2D" parent="PlayerBody"]
position = Vector2( -10, 12 )
